--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "3"
+dockertest = "0.2.1"
+
+[[bin]]
+name = "docker-only"
+path = "docker/dummy.rs"
