--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,4 @@
-# I wish I was in the docker/ folder and not root, but apparantly Docker doesn't look for me anywhere but here :/
+# I wish I was in the docker/ folder and not root, but apparently Docker doesn't look for me anywhere but here :/
 docs/
 .git/
 target/
