--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ gotham = "0.6.0"
 gotham_derive = "0.6.0"
 serde = "1.0.125"
 serde_derive = "1.0.125"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+tokio = { version = "1", features = ["full"] }
 
 [[bin]]
 name = "crust"
