--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,6 @@ name = "crust"
 version = "0.1.0"
 authors = ["a3y3 <sohamssd@gmail.com>"]
 edition = "2018"
-default-run = "crust"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,13 +12,10 @@ gotham = "0.6.0"
 gotham_derive = "0.6.0"
 serde = "1.0.125"
 serde_derive = "1.0.125"
-reqwest = { version = "0.11", features = ["blocking", "json"] }
-tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.11", features = ["json"] }
+tokio = "1.0"
+mime = "0.3.16"
 
 [[bin]]
 name = "crust"
 path = "src/main.rs"
-
-[[bin]]
-name = "docker-only"
-path = "src/dummy.rs"
